<resources>
    <string name="app_name">Tativo</string>
    <string name="txtNombre">Nombre(s)</string>
    <string name="spnEstado">Estado</string>
    <string name="spnMunicipio">Municipio</string>
    <string name="lblEstadoMunicipio">Municipio/Estado</string>
    <string name="spnColonia">Colonia</string>
    <string name="txtCodigoPostal">Código Postal</string>
    <string name="txtNuevaColonia">Agregar colonia</string>
    <string name="txtCalle">Calle</string>
    <string name="txtNumeroExt">Numero Exterior</string>
    <string name="txtNumeroInt">Numero Interior</string>
    <string name="txtTelefonoCelular">Teléfono Celular con LADA</string>
    <string name="spnBanco">Banco</string>
    <string name="spnHintMaterialSpinner">Elige una opción</string>
    <string name="swtTextON">Si</string>
    <string name="swtTextOFF">No</string>
    <string name="msgRefNoContesto">Llamamos a tus referencias, pero no contestaron. Por favor, vuelve a proporcionarnos otras</string>
    <string name="msgRefTitulo">Referencias</string>
    <string name="msgRefOk">De acuerdo</string>
    <string name="msgCamposRequeridos">Favor de llenar todos los campos requeridos</string>
    <string name="hnTelefono">Teléfono con LADA</string>
    <string name="hnCorreo">Correo electrónico</string>
    <string name="hnNumeroTarjetaCLABE">Número de tarjeta o CLABE</string>
    <string name="hnMonto">Monto solicitado (capital)</string>
    <string name="btnCerrar">Cerrar</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="lblNoAplica">N/A</string>
    <string name="txtLogInContrasena">Contraseña</string>
    <string name="txtLogInUsuario">Correo electrónico</string>
    <string name="lblTituloLogIn">Login</string>
    <string name="btnLogIn">Entrar</string>
    <string name="lblRegistro">Registro de usuario</string>
    <string name="lblTituRegistro">Información Personal</string>
    <string name="txtApellidoPaterno">Apellido Paterno</string>
    <string name="txtApellidoMaterno">Apellido Materno</string>
    <string name="hnContrasena">Elige una contraseña</string>
    <string name="hnConfirmacionContrasena">Confirma tu contraseña</string>
    <string name="btnRegistro">Aceptar</string>
    <string name="lblTituloBloque1Ref1">Referencia 1</string>
    <string name="lblTituloBloque1Ref2">Referencia 2</string>
    <string name="lblTituloBloque1RefLaboral">Referencia Laboral</string>
    <string name="txtApellidos">Apellidos</string>
    <string name="txtAñosAmistad">Años de amistad</string>
    <string name="txtAñosTrabajando">Años trabajando ahí</string>
    <string name="txtNombreEmpresa">Nombre de la empresa</string>
    <string name="btnReferencias">Guardar y continuar</string>
    <string name="ckReferenciasAcepta">Al otorgar estos datos acepto que Tativo se ponga en contacto con mis referencias para validar que la informacion sea correcta.</string>
    <string name="spnRelacion">Relación</string>
    <string name="spnAmistad">Años de amistad</string>
    <string name="spnTrabajando">Años trabajando ahí</string>
    <string name="lblTituloInfPersonal">Información Personal</string>
    <string name="txtFechaNacimiento">Fecha de nacimiento</string>
    <string name="txtPersonasDependientes">Personas depedientes</string>
    <string name="spnGenero">Género</string>
    <string name="spnEstadoCivil">Estado Civil</string>
    <string name="spnMarcaCelular">Marca del celular</string>
    <string name="lblTarjetaCredito">¿Cuentas con alguna tarjeta de crédito?</string>
    <string name="lblCuentanosSobreTi">Cuentanos sobre ti</string>
    <string name="txt4DigitosTarjeta">¿Cuales son los últimos 4 digitos de la tarjeta?</string>
    <string name="lblCreditoHipotecario">¿Tienes crédito hipotecario vigente?</string>
    <string name="lblCreditoAutomotriz">¿Has tenido crédito automotriz en los últimos 2 años?</string>
    <string name="ckTerminosCondiciones1">Acepto que tativo trate mis datos económicos / financieros para las descritas en este &lt;a href="https://tativo.com/page/aviso-de-privacidad">Aviso de Privacidad.&lt;/a></string>
    <string name="ckTerminosCondiciones2">Acepto que tativo utilice mi información personal sensible que yo voluntariamente revele para las finalidades descritas en este &lt;a href="https://tativo.com/page/aviso-de-privacidad">Aviso de Privacidad&lt;/a>.</string>
    <string name="ckTerminosCondiciones3">Manifiesto que he leído en su totalidad el &lt;a href="https://tativo.com/page/aviso-de-privacidad">Aviso de Privacidad&lt;/a> y consiento que mis datos personales sean tratados y transferidos conforme a los términos y condiciones que se señalan en dicho documento.</string>
    <string name="ckTerminosCondiciones4">Por este conducto autorizo a Tativo para a través de su personal facultado, lleve a cabo investigaciones de mi comportamiento crediticio.</string>
    <string name="btnInfPersonal">Continuar</string>
    <string name="lblTarjetaDebito">¿Y si no tengo una tarjeta de debito?</string>
    <string name="lblRecibesNomina">¿Es donde recibes tu nomina?</string>
    <string name="spnFrecuenciaPago">Frecuencia de pago</string>
    <string name="spnMedioPago">Medio de Pago</string>
    <string name="txtFechaProximoPago">Fecha de próximo pago</string>
    <string name="btnDatosDeposito">Enviar</string>
    <string name="msjTituloPIN">Faltó esto.</string>
    <string name="lblTituloPIN">Validación de numero celular</string>
    <string name="lblMsjPIN">Hemos enviado un PIN al celular que ingresaste en un paso anterior. Revisa tu teléfono y haznos el favor de ingresarlo aquí.</string>
    <string name="txtPIN">PIN de seguridad</string>
    <string name="btnConfirmarPIN">Continuar</string>
    <string name="NollegaPIN">Pasó el tiempo suficiente para que te llegara el código y vemos que no has ingresado el PIN, ¿recibiste el SMS al celular  &lt;b>%1$s&lt;/b> ?</string>
    <string name="btnReenviarPIN">Volver a enviar el pin</string>
    <string name="btnCambiarNumero">Ingresar otro número celular</string>
    <string name="spnAreaLaboral">Área que laboras</string>
    <string name="txtSueldoMensual">Sueldo mensual</string>
    <string name="txtPaginaEmpresa">Pagina web de la empresa</string>
    <string name="txtActividades">Describe tus actividades</string>
    <string name="btnLaboral">Guardar y continuar</string>
    <string name="spnEdoNacimiento">Estado de nacimiento</string>
    <string name="spnTipoVivienda">Tipo de vivienda</string>
    <string name="spnConQuienVives">¿Con quién vives?</string>
    <string name="spnViviendoAhi">Años viviendo ahí</string>
    <string name="txtTelefonoFijo">Teléfono fijo con LADA</string>
    <string name="swtTienesAutomovil">¿Tienes automóvil?</string>
    <string name="swtEsPropio">¿Es propio?</string>
    <string name="spnNivelEstudio">Nivel de estudios</string>
    <string name="txtNombreEscuela">Nombre de la institución educativa</string>
    <string name="spnCurso">Si pudieras tomar un curso \n¿de que área te interesaría?</string>
    <string name="spnIngles">¿Cómo te consideras <br /> en el idioma inglés?</string>
    <string name="spnActividad">¿Qué actividad va contigo?</string>
    <string name="txtEspecificaActividad">Especifica la actividad</string>
    <string name="spIngresoExtra">¿Cuánto ingreso extra aproximado tienes al mes?</string>
    <string name="txtActivdadIngresoExtra">¿De qué actividad(es) proviene(n) este ingreso extra?</string>
    <string name="lblDispositivos">¿Cuentas con alguno de los siguientes dispositivos?</string>
    <string name="ckDispositivo1">Smartphone</string>
    <string name="ckDispositivo2">Tablet</string>
    <string name="ckDispositivo3">Computadora</string>
    <string name="txtParaQue">¿Para qué ocupas el servicio de prestamo?</string>
    <string name="lblRedesSociales">En orden de mayor a menor ¿qué redes sociales utilizas más?</string>
    <string name="lblDondeInternet">En orden de mayor a menor, ¿en dónde utilizas más internet?</string>
    <string name="btnInfGeneral">Enviar</string>
    <string name="lblInformacionAcreditado">Información de acreditado</string>
    <string name="hnNombreCompleto">Nombre completo</string>
    <string name="hnDireccion">Dirección</string>
    <string name="hnTel">Teléfono</string>
    <string name="hnFechaInicio">Fecha de inicio</string>
    <string name="hnPlazoCompromiso">Plazo compromiso</string>
    <string name="hnPlazoLimite">Plazo límite</string>
    <string name="hnFechaCompromiso">Compromiso de pago</string>
    <string name="hnFechaLimite">Límite de pago</string>
    <string name="hnInteresCompromiso">Interés</string>
    <string name="hnInteresLimite">Interés</string>
    <string name="hnIVACompromiso">IVA</string>
    <string name="hnIVALimite">IVA</string>
    <string name="hnTotalCompromiso">Total compromiso</string>
    <string name="hnTotalLimite">Total limite</string>
    <string name="lblInformacionDeposito">Información de depósito</string>
    <string name="hnNombreBanco">Nombre de banco</string>
    <string name="lblInformacionPago">Información de pago</string>
    <string name="btnVerDocumentos">Ver documentos</string>
    <string name="btnSubirFoto">Seleccionar y subir</string>
    <string name="btnAceptarDocumentos">Enviar</string>
    <string name="lblttCaratulaContrato">Carátula de Contrato</string>
    <string name="lblstContrato">Has scroll para ver el documento completo</string>
    <string name="lblInformacionPrestador">Información de Prestador</string>
    <string name="hnNombreComercial">Nombre Comercial</string>
    <string name="hnRFC">RFC</string>
    <string name="hnInformacionCredito">Información de crédito</string>
    <string name="hnTipoCredito">Tipo de crédito</string>
    <string name="hnTipoSaldo">Tipo de saldo</string>
    <string name="hnCAT">CAT</string>
    <string name="lblCalculoInteres">Metodología de cálculo de interés</string>
    <string name="hnCalculoOrdinaria">Ordinaria</string>
    <string name="lblCalculoOrdinaria">Capital * número de días efectivamente transcurridos * tasa de interés de %1$s diario.</string>
    <string name="hnCalculoMoratoria">Moratoria</string>
    <string name="lblCalculoMoratoria">Capital * número de días efectivamente transcurridos después del vencimiento * tasa de interés de %1$s diario.</string>
    <string name="lblComisiones">Comisiones</string>
    <string name="hnAnalisis">Análisis</string>
    <string name="hnOperacion">Operación</string>
    <string name="hnApertura">Apertura</string>
    <string name="hnCobranza">Cobranza</string>
    <string name="ckTerminosCaratula">Acepto los términos y condiciones plasmados en la carátula de contrato.</string>
    <string name="lblttContratoOperacion">Contrato de Operación</string>
    <string name="hnInteres">Interés</string>
    <string name="hnIVA">IVA</string>
    <string name="hnTotal">Total</string>
    <string name="hnPlazo">Plazo</string>
    <string name="ntdRequisitos">Requisitos</string>
    <string name="ntdRequisitos1">1. Identificacion vigente</string>
    <string name="ntdPasos">Pasos</string>
    <string name="ntdPasos1">1. Ir a una sucursal Bancoppel</string>
    <string name="ntdPasos2">2. Solicitar la apertura de una cuenta de ahorro</string>
    <string name="ntdPasos3">3. Realizar el registro</string>
    <string name="ntdPasos4">4. Activar la cuenta en ventanilla del banco con $1.00</string>
    <string name="ntdPasos5">5. Ingresar a Tativo.com</string>
    <string name="ntdPasos6">6. Continuar el proceso de solicitud de Tativo</string>
</resources>